# CosyVoice

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements_cuda.txt
docs/: cosyvoice3_usage.md
fastapi_service/: server.py  service.py
mcp_service/: server.py  service.py
tests/: test_cosyvoice3.py  test_fastapi.py  test_mcp_tool_call.py
tools/: infer_prompt.py
