[project]
name = "cosyvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "conformer==0.3.2",
  "diffusers==0.29.0",
  "fastapi==0.115.6",
  "fastapi-cli==0.0.4",
  "ffmpeg-python==0.2.0",
  "gdown==5.1.0",
  "grpcio==1.64.1",
  "grpcio-tools==1.64.1",
  "hydra-core==1.3.2",
  "HyperPyYAML==1.2.2",
  "httpx==0.28.1",
  "inflect==7.3.1",
  "librosa==0.10.2",
  "lightning==2.2.4",
  "matplotlib==3.7.5",
  "matcha-tts",
  "minio~=7.2.15",
  "modelscope==1.20.0",
  "networkx==3.1",
  "numpy==1.26.4",
  "omegaconf==2.3.0",
  "onnx==1.16.0",
  "onnxruntime==1.18.0; sys_platform == 'darwin' or sys_platform == 'win32'",
  "openai-whisper==20231117",
  "protobuf>=5.26.1,<6.0.dev0",
  "pyarrow==18.1.0",
  "pydantic",
  "pydub==0.25.1",
  "python-dotenv==1.0.0",
  "python-magic==0.4.27",
  "pyworld==0.3.4",
  "rich==13.7.1",
  "soundfile==0.12.1",
  "tensorboard==2.14.0",
  "torch==2.3.1",
  "torchaudio==2.3.1",
  "transformers==4.51.3",
  "x-transformers==2.11.24",
  "uvicorn==0.30.0",
  "wetext==0.0.4",
  "wget==3.2",
  "mcp>=1.12.4",
  "mcp-server>=0.1.4",
  "langchain-mcp-adapters>=0.2.1",
]

[tool.uv.sources]
matcha-tts = { path = "./third_party/Matcha-TTS", editable = true }

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cosyvoice"]
